--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="com.github.op.xchange.ui.MainActivity">
+    tools:context="com.github.op.xchange.ui.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
