--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="historyItemOdd">#11000000</color>
+    <color name="historyItemEven">#00000000</color>
+    <color name="noData">#ff4444</color>
 </resources>
