--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,12 +35,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="to"/>
+            <Button
+                android:id="@+id/btnSwap"
+                android:layout_width="56dp"
+                android:layout_height="46dp"
+                android:text="swap"/>
 
             <Spinner
                 android:id="@+id/relCurrencySpinner"
