--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,54 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.github.op.xchange.ui.main.MainActivity"
-    tools:ignore="RtlHardcoded">
+    android:paddingTop="14dp"
+    tools:context="com.github.op.xchange.ui.main.MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/_currencies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
 
         <Spinner
             android:id="@+id/baseCurrencySpinner"
-            android:layout_width="match_parent"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/btnSwap"/>
-
-        <Spinner
-            android:id="@+id/relCurrencySpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/baseCurrencySpinner"
-            android:layout_toLeftOf="@id/btnSwap"/>
+            android:layout_weight="1"/>
 
         <ImageButton
             android:id="@+id/btnSwap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:contentDescription="@null"
-            android:padding="4dp"
-            android:src="@drawable/ic_swap_vert"/>
+            android:padding="2dp"
+            android:src="@drawable/ic_swap_horiz"/>
 
+        <Spinner
+            android:id="@+id/relCurrencySpinner"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/mainContentPanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/_currencies">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#11000000"/>
 
         <LinearLayout
             android:id="@+id/latestRatePanel"
